--- a/game-store/client/package.json
+++ b/game-store/client/package.json
@@ -11,6 +11,7 @@
     "bootstrap-icons": "^1.11.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.24.0",
     "react-scripts": "^5.0.1",
     "swiper": "^11.1.4",
