--- a/game-store/client/package.json
+++ b/game-store/client/package.json
@@ -2,6 +2,7 @@
   "name": "game-store",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "./",
   "dependencies": {
     "@stripe/react-stripe-js": "^2.7.3",
     "@stripe/stripe-js": "^4.1.0",
@@ -17,6 +18,7 @@
     "react-router-dom": "^6.24.0",
     "react-scripts": "^5.0.1",
     "swiper": "^11.1.4",
+    "vite": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
