--- a/game-store/package.json
+++ b/game-store/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
     "jsonwebtoken": "^9.0.2"
+  },
+  "scripts": {
+    "build": "npm run build-client && npm run build-server",
+    "build-client": "cd client && npm install && npm run build",
+    "build-server": "cd server && npm install"
   }
 }
